gtkmenusectionbox: remove submenus when the parent item is removed

https://bugzilla.gnome.org/show_bug.cgi?id=749405